Added Board.js and Baord.css

--- a/mandontgetangrygame/src/styles/Consts.css
+++ b/mandontgetangrygame/src/styles/Consts.css
@@ -1,4 +1,5 @@
 :root{
     --webPageBackgroundColour: #282c34;
-    --InputAndBorderColour: white;
+    --BoardBackgroundColour: white;
+    --InputAndBorderChatColour: white;
 }
