--- a/mandontgetangrygame/src/styles/Consts.css
+++ b/mandontgetangrygame/src/styles/Consts.css
@@ -2,4 +2,5 @@
     --webPageBackgroundColour: #282c34;
     --BoardBackgroundColour: white;
     --InputAndBorderChatColour: white;
+    --ExitGameButtonBackgroundColour: white;
 }
