Added Square, SquareWithinSquare,Circle,Center and Triangle

--- a/mandontgetangrygame/src/styles/Consts.css
+++ b/mandontgetangrygame/src/styles/Consts.css
@@ -3,4 +3,6 @@
     --BoardBackgroundColour: white;
     --InputAndBorderChatColour: white;
     --ExitGameButtonBackgroundColour: white;
+    --SquareWithinSquareBackgroundColour: white;
+    --BorderRadius: 2%;
 }
