--- a/mandontgetangrygame/src/styles/organisms/ExitGameButton.css
+++ b/mandontgetangrygame/src/styles/organisms/ExitGameButton.css
@@ -13,7 +13,7 @@
     background-color: var(--ExitGameButtonBackgroundColour); 
     color: black;         
     border: none;         
-    border-radius: 5px;   
+    border-radius: var(--BorderRadius);   
     cursor: pointer;     
     transition: background-color 0.3s;
 }
