--- a/mandontgetangrygame/src/styles/components/Board.css
+++ b/mandontgetangrygame/src/styles/components/Board.css
@@ -6,7 +6,7 @@
     left: 55%;                         
     transform: translate(-50%, -50%);  
     width: 700px;                      
-    height: 660px;                     
-    background-color: var(--BoardBackgroundColour);
-    border-radius: 8px;               
+    height: 660px;  
+    border-radius: var(--BorderRadius);                   
+    background-color: var(--BoardBackgroundColour);               
 }
