--- a/mandontgetangrygame/src/styles/atoms/Triangle.css
+++ b/mandontgetangrygame/src/styles/atoms/Triangle.css
@@ -1,12 +1,34 @@
-/* src/styles/atoms/Triangle.css */
-
 .Triangle {
-
-  border-left: 70px solid transparent;  /* Half of the base width */
-  border-right: 70px solid transparent; /* Half of the base width */
-  border-top: 70px solid blue;         /* Height for an equilateral triangle */
+  width: 0;
+  height: 0;
   position: absolute;
-  top: 50%; /* Position the triangle vertically in the center */
-  left: 50%; /* Position it horizontally in the center */
-  
+}
+
+.triangle-blue {
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 70px solid blue;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.triangle-yellow {
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 70px solid yellow;
+  transform: translateX(26%) translateY(50%) rotate(90deg);
+}
+
+.triangle-green {
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 70px solid green;
+  transform: rotate(180deg);
+}
+
+.triangle-red {
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 70px solid red;
+  transform: translateX(-26%) translateY(-50%) rotate(-90deg);
 }
