--- a/mandontgetangrygame/src/styles/organisms/Center.css
+++ b/mandontgetangrygame/src/styles/organisms/Center.css
@@ -1,6 +1,6 @@
 .Center {
-    width: 20%;      
-    height: 20%;
+    width: 140px;      
+    height: 140px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
