--- a/mandontgetangrygame/src/styles/organisms/Square.css
+++ b/mandontgetangrygame/src/styles/organisms/Square.css
@@ -1,8 +1,8 @@
 @import "../Consts.css";
 
 .Square {
-    width: 40%;  
-    height: 40%; 
+    width: 280px;
+    height: 260px;
     position: absolute; 
 }
 
