--- a/mandontgetangrygame/src/styles/atoms/YellowHorizontalCells.css
+++ b/mandontgetangrygame/src/styles/atoms/YellowHorizontalCells.css
@@ -18,4 +18,10 @@
     background-color: white;
     color: black;
 }
+
+.yellow-arrow {
+    font-size: 32px;
+    color: yellow;
+    text-align: center;
+  }
   
