--- a/mandontgetangrygame/src/styles/components/Board.css
+++ b/mandontgetangrygame/src/styles/components/Board.css
@@ -19,4 +19,15 @@
     top: 40%;
     left: 0;
     right: 0;
-  }
+}
+
+.vertical-cells-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
