--- a/mandontgetangrygame/src/styles/atoms/Circle.css
+++ b/mandontgetangrygame/src/styles/atoms/Circle.css
@@ -2,7 +2,7 @@
     width: 25%;
     height: 25%;
     border-radius: 50%;
-    background-color: grey;
+    background-color: #a9afb2;
     position: absolute;
   }
   
