--- a/mandontgetangrygame/src/styles/components/PlayerInputModal.css
+++ b/mandontgetangrygame/src/styles/components/PlayerInputModal.css
@@ -14,7 +14,7 @@
 .modal {
   background: white;
   padding: 20px;
-  border-radius: 8px;
+  border-radius: var(--BorderRadius);
   text-align: center;
 }
 
@@ -22,14 +22,13 @@
 .modal select {
   width: 80%;
   padding: 10px;
-  margin: 10px 0;
+  margin: 10px;
   border-radius: 4px;
   border: 1px solid #ccc;
 }
 
 .modal button {
-  margin: 5px;
-  padding: 10px 20px;
+  padding: 10px;
   border: none;
   border-radius: 4px;
   background-color: #007bff;
