--- a/mandontgetangrygame/src/styles/organisms/Cube.css
+++ b/mandontgetangrygame/src/styles/organisms/Cube.css
@@ -1,15 +1,17 @@
 .Cube {
     position: absolute;
-    width: 50px; 
-    height: 50px; 
-    top: 4%;          
-    right: 18%;  
+    width: 60px; 
+    height: 60px;  
     background-color: white; 
     border: none; 
     border-radius: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.Cube:hover {
+    background-color: #e0e0e0;
 }
   
 .dots-container {
@@ -27,5 +29,10 @@
     height: 8px;
     background-color: black; 
     border-radius: 50%; 
+}
+
+.Cube:hover .dot {
+    width: 10px;
+    height: 10px;
 }
   
