Modified Chat and Chat in WebPage, so that it connects with backend

--- a/mandontgetangrygame/src/styles/Consts.css
+++ b/mandontgetangrygame/src/styles/Consts.css
@@ -1,5 +1,7 @@
 :root{
     --webPageBackgroundColour: #282c34;
+    --BackgroundColourForMessages: #3c4048;
+    --textColor: #ffffff; 
     --BorderRadius: 2%;
-    --PrettyYellow: #f5e118;
+    --PrettyYellow: #f5e118; 
 }
