Modified PlayerInputModal so that I can add 4 players before starting the game and Chat so that the player has to input it's name to send a messsage

--- a/mandontgetangrygame/src/styles/Consts.css
+++ b/mandontgetangrygame/src/styles/Consts.css
@@ -1,7 +1,8 @@
-:root{
+:root {
     --webPageBackgroundColour: #282c34;
     --BackgroundColourForMessages: #3c4048;
-    --textColor: #ffffff; 
+    --textColor: #ffffff;
     --BorderRadius: 2%;
-    --PrettyYellow: #f5e118; 
+    --PrettyYellow: #f5e118;
+    --ButtonBackgroundColor: #007bff;
 }
