--- a/mandontgetangrygame/src/styles/organisms/Chat.css
+++ b/mandontgetangrygame/src/styles/organisms/Chat.css
@@ -5,7 +5,7 @@
     bottom: 200px;
     left: 40px;
     width: 400px;
-    height: 250px;
+    height: 300px;
     border: 2px solid white;
     background-color: var(--webPageBackgroundColour);
     padding: 10px;
@@ -14,6 +14,39 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    justify-content: center;
+}
+
+.Chat .name-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.Chat .name-input input {
+    background-color: var(--webPageBackgroundColour);
+    color: var(--textColor);
+    border: none;
+    width: 80%;
+    height: 40px;
+    padding: 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+    border-radius: var(--BorderRadius);
+    margin-bottom: 10px;
+}
+
+.Chat .name-input button {
+    background-color: var(--ButtonBackgroundColor);
+    color: white;
+    border: none;
+    width: 80%;
+    height: 40px;
+    font-size: 16px;
+    border-radius: var(--BorderRadius);
+    cursor: pointer;
 }
 
 .Chat .messages {
@@ -33,7 +66,13 @@
     color: var(--textColor);
 }
 
-.Chat input {
+.Chat .message-input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Chat .message-input input {
     background-color: var(--webPageBackgroundColour);
     color: var(--textColor);
     border: none;
@@ -43,10 +82,19 @@
     font-size: 16px;
     box-sizing: border-box;
     border-radius: var(--BorderRadius);
-    margin-right: 10px;
 }
 
-.Chat input::placeholder {
+.Chat .message-input input::placeholder {
     color: var(--textColor);
     opacity: 0.8;
+}
+
+.Chat .message-input button {
+    background-color: var(--ButtonBackgroundColor);
+    color: white;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: var(--BorderRadius);
+    cursor: pointer;
 }
