--- a/mandontgetangrygame/src/styles/components/PlayerInputModal.css
+++ b/mandontgetangrygame/src/styles/components/PlayerInputModal.css
@@ -18,13 +18,18 @@
   text-align: center;
 }
 
-.modal input,
-.modal select {
+.player-input {
+  margin-bottom: 20px;
+}
+
+.player-input input,
+.player-input select {
   width: 80%;
   padding: 10px;
   margin: 10px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 .modal button {
