Made the pawns get on board from squares

--- a/mandontgetangrygame/src/styles/atoms/BlueVerticalCells.css
+++ b/mandontgetangrygame/src/styles/atoms/BlueVerticalCells.css
@@ -12,6 +12,7 @@
     align-items: center;
     border: 1px solid #ccc;
     padding: 5px;
+    position: relative;
 }
 
 .grid-container-blue .grid-item.highlight {
