--- a/mandontgetangrygame/src/styles/atoms/Pawn.css
+++ b/mandontgetangrygame/src/styles/atoms/Pawn.css
@@ -10,7 +10,6 @@
     transition: all 0.3s ease;
 }
   
-  
 .Pawn::before {
     content: '';
     position: absolute;
@@ -22,6 +21,23 @@
     border-radius: 50%;
     transform: translateX(-50%);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+}
+
+.Pawn.smaller {
+    width: 12px;
+    height: 22px;
+    transform: translateX(-1px);
+}
+  
+.Pawn.smaller::before {
+    width: 10px;
+    height: 10px;
+    top: -8px;
+}
+
+.Pawn.smaller:hover {
+    width: 16px;
+    height: 26px;
 }
   
 .Pawn:hover {
