Changed the implementation of Chat in the backend so that it doesn't use framework

--- a/mandontgetangrygame/src/styles/atoms/GreenVerticalCells.css
+++ b/mandontgetangrygame/src/styles/atoms/GreenVerticalCells.css
@@ -4,6 +4,7 @@
     grid-template-rows: repeat(6, 43px);
     width: 140px;
     transform: translateY(-1px);
+    grid-auto-flow: column;
 }
 
 .grid-item {
